# task-manager

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: Test.yml  linter.yml  test-coverage.yml  test.yml
task_manager/: rollbar_middleware.py  settings.py  urls.py  utils.py
task_manager/accounts/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
task_manager/accounts/tests/: conftest.py  test_accounts_views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/pages/: apps.py  urls.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options.py  0003_alter_status_creation_date_alter_status_name.py
task_manager/tags/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/tags/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0003_alter_task_author.py  0004_alter_task_author_alter_task_doer_alter_task_status.py  0005_alter_task_doer.py  0006_alter_task_doer.py  0007_alter_task_doer.py  0008_alter_task_doer.py  0009_alter_task_doer.py  0016_task_tags.py  (+16 more)
task_manager/templates/: base.html  home.html
task_manager/tests/: conftest.py  test_accounts_views.py  test_labels_views.py  test_statuses_views.py  test_tags_views.py  test_tasks_vews.py
(+29 files in other folders)
