[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
django-extensions = "^3.2.1"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
django-bootstrap4 = "^22.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | migrations
)/
'''
